# dorisLearnOpenGL

./: CMakeLists.txt  Camera.h  README.md  Shader.cpp  Shader.h  glad.c
Triangle/: frag.fs  lamp.fs  main.cpp  vertex.vs
include/glad/: glad.h
libs/: glfw3.lib
